--- a/TaskApi/TaskApi/Pages/Index.cshtml
+++ b/TaskApi/TaskApi/Pages/Index.cshtml
@@ -1,12 +1,46 @@
 ﻿@page
 @model TaskApi.Pages.IndexModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewData["Title"] = "Index";
 }
 
 <h2>Index</h2>
 <hr />
-<p>
-    @Model.Message
-</p>
+@*<p>
+        @Model.Message
+    </p>*@
+
+<h1>Tasks</h1>
+<form method="post">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Is Complete</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var task in Model.Tasks)
+            {
+            <tr>
+                <td>@task.Id</td>
+                <td>@task.Name</td>
+                <td>@task.IsComplete</td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@task.Id">edit</a>
+                    <button type="submit" asp-page-handler="delete"
+                            asp-route-id="@task.Id">
+                        delete
+                    </button>
+                </td>
+            </tr>
+            }
+        </tbody>
+    </table>
+
+    <a asp-page="./Create">Create</a>
+</form>
 
